test pipeline with integration tests